--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,24 +1,25 @@
+/* Settings */
+@import url('/assets/styles/01_settings/_design-tokens.css');
+@import url('/assets/styles/01_settings/_variables.css');
+@import url('/assets/styles/01_settings/_mixins.css');
+
+/* Base */
+@import url('/assets/styles/02_base/_reset.css');
+@import url('/assets/styles/02_base/_base.css');
+
+/* Components */
+@import url('/assets/styles/03_components/_buttons.css');
+@import url('/assets/styles/03_components/_forms.css');
+@import url('/assets/styles/03_components/_dropdowns.css');
+@import url('/assets/styles/03_components/_sidebar.css');
+@import url('/assets/styles/03_components/_navbar.css');
+@import url('/assets/styles/03_components/_data-table.css');
+@import url('/assets/styles/03_components/_checklist.css');
+@import url('/assets/styles/03_components/_layout.css');
+
+/* Test Style - Should be at the end to override other styles */
 .test-style {
     border: 5px solid red !important;
     background-color: yellow !important;
     padding: 10px !important;
 }
-
-/* Settings */
-@import './01_settings/_design-tokens.css';
-@import './01_settings/_variables.css';
-@import './01_settings/_mixins.css';
-
-/* Base */
-@import './02_base/_reset.css';
-@import './02_base/_base.css';
-
-/* Components */
-@import './03_components/_buttons.css';
-@import './03_components/_forms.css';
-@import './03_components/_dropdowns.css';
-@import './03_components/_sidebar.css';
-@import './03_components/_navbar.css';
-@import './03_components/_data-table.css';
-@import './03_components/_checklist.css';
-@import './03_components/_layout.css';
