--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,6 +1,26 @@
-@import url('/assets/styles/combined.css');
 
-/* Test Style - Should be at the end to override other styles */
+/* Settings */
+@import url('01_settings/_design-tokens.css');
+@import url('01_settings/_variables.css');
+@import url('01_settings/_mixins.css');
+
+/* Base */
+@import url('02_base/_reset.css');
+
+/* Components */
+@import url('03_components/_layout.css');
+@import url('03_components/_navbar.css');
+@import url('03_components/_sidebar.css');
+@import url('03_components/_buttons.css');
+@import url('03_components/_forms.css');
+@import url('03_components/_data-table.css');
+@import url('03_components/_debug.css');
+@import url('03_components/_checklist.css');
+@import url('03_components/_dropdowns.css');
+
+
+
+/* Test Style */
 .test-style {
     border: 5px solid red !important;
     background-color: yellow !important;
